--- a/Collab.html
+++ b/Collab.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="Collab.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="Collab.css">
 </head>
 <body>
-
+  <ul>
+      <li>Home</li>
+      <li>Nav 2</li>
+      <li>Nav 3</li>
+  </ul>  
+  <h1>Climate Change project</h1>   
+  <p>This is placeholder text for a paragraph about climate change.
+       This needs to be changed to something else
+  </p>    
+  <img>
+  <form>
+    <input type="text" id="First text" name="First text">
+    <label for="First text">First text</label>  
+    <input type="text" id="Second text" name="Second text">
+    <label for="Second text">Second text</label>  
+    <input type="submit" value="Submit">
+  </form>
+  <div>
+  <table class="table table-bordered">
+    <tr>
+      <th>Climate Heading 1</th>
+      <th>Climate Heading 2</th>
+      <th>Climate Heading 3</th>
+    </tr>
+    <tr>
+      <td>Entry 1</td>
+      <td>Entry 2</td>
+      <td>Entry 3</td>
+    </tr>
+    <tr>
+      <td>Entry 4</td>
+      <td>Entry 5</td>
+      <td>Entry 6</td>
+    </tr>
+  </table>
+  </div>
 </body>
 </html>
