--- a/Collab.html
+++ b/Collab.html
@@ -7,15 +7,36 @@
   <link rel="stylesheet" href="Collab.css">
 </head>
 <body>
+  <div class="navBar">
   <ul>
       <li>Home</li>
       <li>Nav 2</li>
       <li>Nav 3</li>
   </ul>  
-  <h1>Climate Change project</h1>   
-  <p>This is placeholder text for a paragraph about climate change.
-       This needs to be changed to something else
+  </div>
+
+  <div>
+  <h1>Climate Change Project</h1>   
+  <p>    
+    "Earth's climate has changed throughout history. 
+    Just in the last 650,000 years there have been seven cycles of glacial advance and retreat, 
+    with the abrupt end of the last ice age about 11,700 years ago marking the beginning of 
+    the modern climate era — and of human civilization. 
+    Most of these climate changes are attributed to very small variations in Earth’s orbit that 
+    change the amount of solar energy our planet receives.
   </p>    
+  <p>
+    The current warming trend is of particular significance because it is unequivocally the result 
+    of human activity since the mid-20th century and proceeding at a rate that is unprecedented over 
+    millennia. It is undeniable that human activities have warmed the atmosphere, ocean, and land and 
+    that widespread and rapid changes in the atmosphere, ocean, cryosphere, and biosphere have occurred."
+  </p>
+  <p class="source">
+    - NASA
+  </p>
+  </div>
+
+  <div class="form">
   <img>
   <form>
     <input type="text" id="First text" name="First text">
@@ -24,6 +45,8 @@
     <label for="Second text">Second text</label>  
     <input type="submit" value="Submit">
   </form>
+  </div>
+
   <div>
   <table class="table table-bordered">
     <tr>
