--- a/Collab.html
+++ b/Collab.html
@@ -15,8 +15,12 @@
   </ul>  
   </div>
 
-  <div>
-  <h1>Climate Change Project</h1>   
+  
+ <img src="https://physics.aps.org/assets/00a24859-52ba-43b7-926b-10ad3744d2e8/e24_1.png">
+
+  <h1>Climate Change Project</h1> 
+  
+  <div class="info">
   <p>    
     "Earth's climate has changed throughout history. 
     Just in the last 650,000 years there have been seven cycles of glacial advance and retreat, 
@@ -36,35 +40,34 @@
   </p>
   </div>
 
-  <div class="form">
-  <img>
-  <form>
-    <input type="text" id="First text" name="First text">
-    <label for="First text">First text</label>  
-    <input type="text" id="Second text" name="Second text">
-    <label for="Second text">Second text</label>  
-    <input type="submit" value="Submit">
-  </form>
-  </div>
 
-  <div>
+  <div class="table">
   <table class="table table-bordered">
     <tr>
-      <th>Climate Heading 1</th>
-      <th>Climate Heading 2</th>
-      <th>Climate Heading 3</th>
+      <th>Things We Can Do</th>
+      <th>How It Helps</th>
+  
     </tr>
     <tr>
-      <td>Entry 1</td>
-      <td>Entry 2</td>
-      <td>Entry 3</td>
+      <td>Power your home with renewable energy.</td>
+      <td>Choose a utility company that generates at least half its power from wind or solar and has been certified by Green-e Energy, 
+        an organization that vets renewable energy options. If that isn’t possible for you, take a look at your electric bill; 
+        many utilities now list other ways to support renewable sources on their monthly statements and websites.</td>
     </tr>
     <tr>
-      <td>Entry 4</td>
-      <td>Entry 5</td>
-      <td>Entry 6</td>
+      <td>Reduce water waste.</td>
+      <td>Saving water reduces carbon pollution, too. That's because it takes a lot of energy to pump, heat, and treat your water. 
+        So take shorter showers, turn off the tap while brushing your teeth, and switch to WaterSense-labeled fixtures and appliances.</td>
+    </tr>
+    <tr>
+      <td>Actually eat the food you buy—and make less of it meat.</td>
+      <td>Approximately 10 percent of U.S. energy use goes into growing, 
+        processing, packaging, and shipping food—about 40 percent of which just winds up in the landfill. “If you’re wasting less food, you’re likely cutting 
+        down on energy consumption,” Haq says. And since livestock products are among the most resource-intensive to produce, 
+        eating meat-free meals can make a big difference, too.</td>
     </tr>
   </table>
   </div>
+  <a href="https://www.nrdc.org/stories/how-you-can-stop-global-warming">Source</a>
 </body>
 </html>
